# repro

./: .bazelrc  MODULE.bazel  README.md
demo/: BUILD.bazel  program.cc
