load("@rules_cc//cc:defs.bzl", "cc_binary")

genrule(
    name = "_genrule",
    outs = ["mesh.mtl"],
    cmd = """echo 'newmtl MeshMaterial
Kd 0.8 0.8 0.[8
Ka 0 0 0
Ks 0.2 0.2 02
illum 2' >> $@""",
)

cc_binary(
    name = "program",
    srcs = ["program.cc"],
    data = [
        "mesh.obj",
        ":mesh.mtl",
    ],
    deps = [
        "@rules_cc//cc/runfiles",
        # The next line is a hack to get BAZEL_CURRENT_REPOSITORY working.
        "@bazel_tools//tools/cpp/runfiles",
    ],
)
